Individual analyzer and Navbar changes 1. Semi-fixed Navbar padding when scrolling on mobile. 2. Created the base html for individual analyzer     - Text area, title, image, buttons     - Added JS character limit counter for text area

--- a/code/static/styles.css
+++ b/code/static/styles.css
@@ -5,7 +5,6 @@
 	--color-periwinkle: #A3C6EE;
 	--color-fadedwhite: hsla(0, 0%, 100%, 0.20);
     --font-base: 'Inter';
-
 }
 
 * {
@@ -213,6 +212,9 @@ footer {
   }
 
 @media (max-width: 992px) {
+    .navbar {
+        padding-top: 2rem !important;
+    }
     .navbar-brand {
         font-size: 28px !important;
         padding-left: 0px !important;
